--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,15 @@
+h1, h2, h3, h4, h5, h6, p {
+    margin: 0;
+}
+    
 a {
     text-decoration: none;
 }
 
 ul {
     list-style-type: none;
+    margin: 0;
+    padding-left: 0;
 }
 
 button {
@@ -14,6 +20,34 @@ body {
     font-family: "Roboto", sans-serif;
     background-color: #ffffff;
     color: #434455;
+}
+
+.container {
+    max-width: 1158px;
+    padding: 0 15px;
+    margin: 0 auto;
+}
+
+.header-container {
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #e7e9fc;
+}
+
+.nav-container {
+    display: flex;
+    gap: 76px;
+    align-items: center;
+}
+
+.menu-list {
+    display: flex;
+    gap: 40px;
+}
+
+.address-container {
+    display: flex;
+    gap: 40px;
 }
 
 .page-logo {
@@ -36,6 +70,8 @@ body {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    padding: 24px 0;
+    display: block;
 }
 
 .contact-list-link {
@@ -47,6 +83,7 @@ body {
 
 .contact-block {
     font-style: normal;
+    margin-left: auto;
 }
 
 .menu-link:hover, 
@@ -58,14 +95,21 @@ body {
 
 .hero-section {
     background-color: #2e2f42;
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 188px 0;
+    
 }
 
 .hero-title {
-    font-size: 56px;
+    font-size: 56px; 
     line-height: 1.07;
     letter-spacing: 0.02em;
     text-align: center;
     color: #ffffff;
+    max-width: 496px;
+    margin: 0 auto;
+    margin-bottom: 48px;
 }
 
 .hero-button {
@@ -76,11 +120,46 @@ body {
     letter-spacing: 0.04em;
     color: #ffffff;
     background-color: #4d5ae5;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    display: block;
+    margin: 0 auto;
+    border-radius: 4px;
+    padding: 16px 32px;
+    min-width: 169px;
+    height: 56px;
+    border: none;
 }
 
 .hero-button:hover,
 .hero-button:focus {
     background-color: #404bbf;
+}
+
+.section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
+.benefits-list {
+    display: flex;
+    gap: 24px;
+}
+
+.benefits-list-item {
+    width: calc((100% - 24px * 3) / 4);
 }
 
 .benefits-list-title {
@@ -89,6 +168,7 @@ body {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    margin-bottom: 8px;
 }
 
 .benefits-list-text {
@@ -101,9 +181,18 @@ body {
     background-color: #f4f4fd;
 } 
 
+.team-list {
+    display: flex;
+    gap: 24px;
+}
+
 .team-list-item {
     background-color: #ffffff;
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    border-radius: 0 0 4px 4px;
+    width: calc((100% - 72px) / 4);
 }
+
 .section-title {
     text-transform: capitalize;
     font-size: 36px;
@@ -111,6 +200,7 @@ body {
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
+    margin-bottom: 72px;
 }
 
 .team-member-name, 
@@ -120,10 +210,11 @@ body {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    padding-bottom: 8px;
 }
 
 .team-member-name {
-    text-align: center;
+    text-align: center;  
 }
 
 .team-member-text,
@@ -135,6 +226,34 @@ body {
 
 .team-member-text {
     text-align: center;
+}
+
+.team-card-text {
+    padding: 32px 16px;
+}
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+.portfo-list {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 48px;
+    column-gap: 24px;
+}
+
+.portfo-list-item {
+    width: calc((100% - 24px * 2) / 3);
+}
+
+.portfo-card-text {
+    padding: 32px 16px;
+    border-bottom: 1px solid #e7e9fc;
+    border-left: 1px solid #e7e9fc;
+    border-right: 1px solid #e7e9fc;
 }
 
 .page-footer {
@@ -150,4 +269,11 @@ body {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    width: 264px;
+    margin-top: 16px;
+}
+
+.footer-container {
+   padding-top: 100px;
+   padding-bottom: 100px;
 }
