--- a/css/styles.css
+++ b/css/styles.css
@@ -31,12 +31,14 @@ body {
 .header-container {
     display: flex;
     align-items: center;
+}
+
+.page-header {
     border-bottom: 1px solid #e7e9fc;
 }
 
 .nav-container {
     display: flex;
-    gap: 76px;
     align-items: center;
 }
 
@@ -61,7 +63,11 @@ body {
 }
 
 .header-studio {
-    color: #2e2f42;
+    color: #2e2f42;  
+}
+
+.header-logo {
+    margin-right: 76px;
 }
 
 .menu-link {
@@ -210,11 +216,12 @@ body {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
-    padding-bottom: 8px;
+    margin-bottom: 8px;
 }
 
 .team-member-name {
-    text-align: center;  
+    text-align: center;
+
 }
 
 .team-member-text,
@@ -229,7 +236,7 @@ body {
 }
 
 .team-card-text {
-    padding: 32px 16px;
+    padding: 32px 0 32px;
 }
 
 img {
@@ -258,6 +265,8 @@ img {
 
 .page-footer {
     background-color: #2e2f42;
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 
 .footer-studio,
@@ -270,10 +279,9 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     width: 264px;
-    margin-top: 16px;
 }
 
-.footer-container {
-   padding-top: 100px;
-   padding-bottom: 100px;
+.footer-logo {
+    display: inline-block;
+    margin-bottom: 16px;
 }
